--- a/the_tris/static/style.css
+++ b/the_tris/static/style.css
@@ -167,6 +167,7 @@ body{
     border-radius: 30px;
     box-shadow: 0px 0px 20px #d43c55;
     backdrop-filter: blur(5px);
+    font-family: 'Catamaran', sans-serif;
     margin-left: auto;
     margin-right: auto;
     align-items: center;
@@ -177,6 +178,7 @@ body{
     /* height: 350px; */
     /* width: 350px; */
     display: grid;
+    font-family: 'Catamaran', sans-serif;
     grid-template-areas: 
         'slot slot slot'
         'slot slot slot'
@@ -208,7 +210,7 @@ body{
     border: 2px solid white;
     border-radius: 15px;
     cursor: pointer;
-    font-size: 70px;
+    font-size: 65px;
     text-align: center;
 }
 .grid div:hover{
