--- a/the_tris/static/style.css
+++ b/the_tris/static/style.css
@@ -218,11 +218,11 @@ body{
 }
 
 .pinkPad{
-    color: #d43c55;
+    color: #ff3c5d;
 }
 
 .greenPad{
-    color: #15be3f;
+    color: #0fec46;
 }
 
 #onePlayerName{
